--- a/SkycaijiApp/Home/View/Common/header.html
+++ b/SkycaijiApp/Home/View/Common/header.html
@@ -21,6 +21,14 @@
   	<!-- jQuery 3.1.1 -->
 	<script src="__PUBLIC__/js/jquery-3.1.1.min.js?{$Think.config.HTML_V}"></script>
 	<!-- else -->
+  	<link href="__PUBLIC__/css/toastr.css?{$Think.config.HTML_V}" rel="stylesheet" type="text/css">
+  	<script src="__PUBLIC__/js/toastr.js?{$Think.config.HTML_V}"></script>
+	<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+	<script src="__PUBLIC__/js/ie10-viewport-bug-workaround.js?{$Think.config.HTML_V}"></script><!-- jQuery UI 1.11.4 -->
+	<script src="__PUBLIC__/js/jquery-ui.min.js?{$Think.config.HTML_V}"></script>
+	<!-- Bootstrap 3.3.7 -->
+	<script src="__PUBLIC__/adminlte/bootstrap/js/bootstrap.min.js?{$Think.config.HTML_V}"></script>
+	<!-- custom -->
 	<script src="__PUBLIC__/js/common.js?{$Think.config.HTML_V}"></script>
 	<link href="__PUBLIC__/css/home.css?{$Think.config.HTML_V}" rel="stylesheet">
 </head>
