--- a/SkycaijiApp/Install/View/Common/header.html
+++ b/SkycaijiApp/Install/View/Common/header.html
@@ -24,6 +24,13 @@
 	<script type="text/javascript" src="__PUBLIC__/js/base64.min.js?{$Think.config.HTML_V}"></script>
   	<link href="__PUBLIC__/css/toastr.css?{$Think.config.HTML_V}" rel="stylesheet" type="text/css">
   	<script src="__PUBLIC__/js/toastr.js?{$Think.config.HTML_V}"></script>
+	<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+	<script src="__PUBLIC__/js/ie10-viewport-bug-workaround.js?{$Think.config.HTML_V}"></script><!-- jQuery UI 1.11.4 -->
+	<script src="__PUBLIC__/addon/adminlte/jquery-ui.min.js?{$Think.config.HTML_V}"></script>
+	<!-- Bootstrap 3.3.7 -->
+	<script src="__PUBLIC__/adminlte/bootstrap/js/bootstrap.min.js?{$Think.config.HTML_V}"></script>
+	<script src="__PUBLIC__/js/bootbox.min.js?{$Think.config.HTML_V}"></script>
+  	<!-- custom -->
 	<link href="__PUBLIC__/css/install.css" rel="stylesheet">
 	<script src="__PUBLIC__/js/common.js?{$Think.config.HTML_V}"></script>
 	<script type="text/javascript">var site_config={root:"__ROOT__",'pub':"__PUBLIC__"};</script>
