--- a/Public/css/admin.css
+++ b/Public/css/admin.css
@@ -108,8 +108,10 @@ table.datatable thead .sorting_desc_disabled {
 table.datatable thead .sorting:after,
 table.datatable thead .sorting_asc:after,
 table.datatable thead .sorting_desc:after {
-	float:right;
-	display: block;
+	position: absolute;
+    top: 8px;
+    right: 8px;
+    display: block;
 	font-family: 'Glyphicons Halflings';
 	opacity: 0.5;
 }
@@ -133,38 +135,42 @@ table.datatable thead .sorting_desc:after {
 /*错误提示框*/
 .toast-top-center{margin-top:10px;}
 
-/*采集器面板*/
-.coll-panel .panel-heading{background-color:#d2d6de;}
-.coll-panel .panel-default .panel-default .panel-heading{background-color:#efefef;}
-.coll-panel .panel-heading a{color:#333;}
 /*modal框*/
 .myModal{}
 .modal-title{font-size:16px;}
 .myModal .modal-body iframe{width:100%;height:100%;min-height:200px;}
 .myModal button.close{font-size:18px;}
+/*采集器面板*/
+.coll-panel .panel-heading{background-color:#d2d6de;}
+.coll-panel .panel-default .panel-default .panel-heading{background-color:#efefef;}
+.coll-panel .panel-heading a{color:#333;}
+
+#c_p_level_urls tbody{
+ 	counter-reset:levelcounter;
+}
+#c_p_level_urls .level:before{
+ 	content:counter(levelcounter);
+	counter-increment:levelcounter;
+	font-weight:bold;
+}
+/*采集器选项卡*/
+.coll-tab > li:nth-child(3).active > a{background:#f5f5f5;}
 /*请求头信息*/
 .c-p-request-headers .delete-request-header{margin-top:8px;}
-/*采集器字段*/
-.c-p-field-list .field-name{color:#3c8dbc;cursor:pointer;}
-.c-p-field-list .exist-process{color:green;}
-/*分页字段*/
-#c_p_paging_fields{
-	width:auto;
-	overflow:hidden;
-}
-#c_p_paging_fields .paging-field{
+/*参数标签样式*/
+.param-label{
+	font-size:16px;
 	font-weight:normal;
 	padding: 4px 8px;
     text-decoration: none;
     border-bottom: none;
     color: #3B6268;
     border: 1px #ccc solid;
-	margin:7px 10px 5px 0;
+	margin:7px 15px 5px 0;
 	position:relative;
 	float:left;
 }
-
-#c_p_paging_fields .paging-field em{
+.param-label em.delete{
     font-style: normal;
     display: block;
     position: absolute;
@@ -173,7 +179,15 @@ table.datatable thead .sorting_desc:after {
     z-index: 999;
 	background:#fff;
 }
-
+/*采集器字段*/
+.c-p-field-list .field-name{color:#3c8dbc;cursor:pointer;}
+.c-p-field-list .exist-process{color:green;}
+.slt-field-source{width:auto!important;max-width:100px!important;overflow:auto;border-left:0;}
+/*分页字段*/
+#c_p_paging_fields{
+	width:auto;
+	overflow:hidden;
+}
 
 .form-inline label{font-weight:normal;}
 
@@ -196,12 +210,13 @@ table.datatable thead .sorting_desc:after {
 .loading{background:url('../images/loading.gif') no-repeat 5px 0;width:37px;height:32px;}
 
 
-.iga-rt{text-align:left;}
-.iga-rt .blk{display:block;line-height:20px;}
+.iga-rt{text-align:left;line-height:20px;}
+.iga-rt .blk{display:block;}
 .iga-rt .mgr{margin-right:5px;}
 
 
 .nav-save2store{float:right!important;}
+.nav-save2store .dropdown-menu li a{padding-top:5px;padding-bottom:5px;}
 /*数据处理*/
 .p-m-html-tags{}
 .p-m-html-tags a{font-size:12px;font-weight:normal;cursor:pointer;margin-right:5px;}
