--- a/SkycaijiApp/Admin/View/Common/header_public.html
+++ b/SkycaijiApp/Admin/View/Common/header_public.html
@@ -31,6 +31,16 @@
   <script type="text/javascript" src="__PUBLIC__/js/base64.min.js?{$Think.config.HTML_V}"></script>
   <link href="__PUBLIC__/css/toastr.css?{$Think.config.HTML_V}" rel="stylesheet" type="text/css">
   <script src="__PUBLIC__/js/toastr.js?{$Think.config.HTML_V}"></script>
+  <!-- jQuery UI 1.11.4 -->
+  <script src="__PUBLIC__/addon/adminlte/jquery-ui.min.js?{$Think.config.HTML_V}"></script>
+  <!-- Bootstrap 3.3.7 -->
+  <script src="__PUBLIC__/adminlte/bootstrap/js/bootstrap.min.js?{$Think.config.HTML_V}"></script>
+  <!-- FastClick -->
+  <script src="__PUBLIC__/adminlte/plugins/fastclick/fastclick.min.js?{$Think.config.HTML_V}"></script>
+  <!-- AdminLTE App -->
+  <script src="__PUBLIC__/adminlte/dist/js/adminlte.min.js?{$Think.config.HTML_V}"></script>
+  <script src="__PUBLIC__/js/bootbox.min.js?{$Think.config.HTML_V}"></script>
+  <!-- custom -->
   <script src="__PUBLIC__/js/common.js?{$Think.config.HTML_V}"></script>
   <script src="__PUBLIC__/js/admin.js?{$Think.config.HTML_V}"></script>
   <link href="__PUBLIC__/css/admin.css?{$Think.config.HTML_V}" rel="stylesheet" type="text/css">
