--- a/SkycaijiApp/Admin/View/Release/cmsBind.html
+++ b/SkycaijiApp/Admin/View/Release/cmsBind.html
@@ -1,20 +1,23 @@
-<if condition="!empty($cmsApp)">
+<if condition="!empty($cmsApps)">
 <php>$sltedCmsApp=array($cmsApp=>' selected="selected"');</php>
 <div class="form-group">
 	<div class="input-group">
 		<label class="input-group-addon"><b>CMS应用</b></label>
 		<select name="cms[app]" class="form-control">
+		<option value="">请选择</option>
 		<foreach name="cmsApps" item="cmsAppV">
 		<option value="{$cmsAppV['app']}"{$sltedCmsApp[$cmsAppV['app']]}>{$cmsAppV['name']}</option>
 		</foreach>
 		</select>
 	</div>
 </div>
+<if condition="!empty($releCms)">
 <div class="box box-primary">
 <div class="box-body">
-<php> !empty($releCms) && $releCms->tplBind(); </php>
+<php>$releCms->tplBind();</php>
 </div>
 </div>
+</if>
 <else />
 没有“{$cmsName}”相关的发布应用，在<a href="http://www.skycaiji.com/store/cms?q={$cmsName|rawurlencode}" onclick="windowStore('CMS发布应用',$(this).attr('href'));return false;">云平台</a>中查找
 </if>
