--- a/SkycaijiApp/Admin/View/Task/add_form.html
+++ b/SkycaijiApp/Admin/View/Task/add_form.html
@@ -1,4 +1,4 @@
-<form id="form_item" method="post" ajax-submit="true" role="form" action="{:U('Task/'.($taskData?'edit':'add'))}">
+<form id="form_item" method="post" enctype="multipart/form-data" action="{:U('Task/'.($taskData?'edit':'add'))}">
 	<if condition="$taskData">
 	<input type="hidden" name="id" value="{$taskData['id']}" />
 	</if>
@@ -24,9 +24,11 @@
 			   	导入规则
 			  	<span class="caret"></span>
 			  </button>
-			  <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="btn_import_rule">
+			  <ul class="dropdown-menu dropdown-menu-right dropdown-import-rule" aria-labelledby="btn_import_rule">
 			  	<li><a href="javascript:;" onclick="windowModal('导入规则会覆盖该任务的采集器设置，且不可恢复','{:U("Mystore/collect?tpl=task")}');">已下载规则</a></li>
 			  	<li><a href="javascript:;" onclick="windowModal('导入规则会覆盖该任务的采集器设置，且不可恢复','{:U("Collector/list?module=pattern&tpl=task")}');">其它任务的规则</a></li>
+			  	<li role="separator" class="divider"></li>
+			  	<li style="padding-left:20px;padding-bottom:5px;"><input type="file" name="rule_file" /></li>
 			  </ul>
 			</div>
 		</div>
@@ -40,7 +42,7 @@
     </div>
    	<div class="form-group">
        	<label>{$Think.lang.task_sort}</label>
-		<input type="text" class="form-control" name="sort" style="width:100px;" autocomplete="off" value="{$taskData['sort']|intval}" />
+		<input type="text" class="form-control" name="sort" autocomplete="off" value="{$taskData['sort']|intval}" />
 		<p class="help-block">{$Think.lang.task_sort_help}</p>
 	</div>
    	<div class="form-group">
@@ -49,12 +51,13 @@
 	<include file="Task:stepsbar" />
 </form>
 <script type="text/javascript">
-<if condition="$taskData">
+<if condition="!empty($taskData)">
 	$('#form_item select[name="tg_id"]').val("{$taskData['tg_id']|intval}");
 	$('#form_item select[name="auto"]').val("{$taskData['auto']|intval}");
 	$('#form_item select[name="module"]').val("{$taskData['module']}");
 	$('#form_item input[name="auto"][value="{$taskData["auto"]|intval}"]').attr('checked','checked');
 </if>
+//模块显示导入
 $('#form_item select[name="module"]').bind('change',function(){
 	if($(this).val()!='pattern'){
 		$('#btn_import_rule').parents('.input-group-btn').hide();
@@ -62,10 +65,19 @@ $('#form_item select[name="module"]').bind('change',function(){
 		$('#btn_import_rule').parents('.input-group-btn').show();
 	}
 });
-
+//导入本地规则
+$('#form_item [name="rule_file"]').bind('change',function(){
+	import_rule('file',$(this).val());
+	$(this).parents('.dropdown').removeClass('open');
+});
+//导入规则
 function import_rule(ruleId,ruleName){
 	$('#form_item input[name="rule_id"]').val(ruleId);
 	$('#btn_import_rule').text('导入规则：'+ruleName);
+	if(ruleId!='file'){
+		//不是文件规则
+		$('#form_item [name="rule_file"]').val('');
+	}
 	$('#myModal').modal('hide');
 }
 </script>
